fix: markdown tables on mobile

--- a/root/assets/css/markdown.css
+++ b/root/assets/css/markdown.css
@@ -101,3 +101,8 @@ blockquote::after {
 	height: 100%;
 	width: 3px;
 }
+
+.markdown table {
+    overflow-x: auto;
+    display: block;
+}
